--- a/app/templates/admin/usuarios.html
+++ b/app/templates/admin/usuarios.html
@@ -15,7 +15,9 @@
 </nav>
 
 <div class="container-fluid">
-    MODULO USUARIOS...
+  {% for user in users %}
+  <li>{{ user.email }} - {{ user.first_name }} - {{ user.last_name }}</li>
+  {% endfor %}
 </div>
 
 {% endblock %}
