agregado modulo para verificar permisos, registro de usuarios y listado de usuarios para admin

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -19,7 +19,7 @@
             <div class="card text-center text-white w-50 bg-color-1" href="#">
                 <img src="../../static/img/Users.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title"><a href="{{ url_for('admin.usuarios') }}" class="stretched-link">Usuarios</a></h5>
+                    <h5 class="card-title"><a href="{{ url_for('admin.listar_usuarios') }}" class="stretched-link">Usuarios</a></h5>
                 </div>
             </div>
         </div>
