--- a/app/templates/admin/layout.html
+++ b/app/templates/admin/layout.html
@@ -15,7 +15,7 @@
   <header>
     <nav class="navbar bg-color-1">
       <a class="navbar-brand" href="{{ url_for('admin.index') }}">
-        <img src="../../static/img/Logo.png" width="200" height="75" alt="">
+        <img src="../../../static/img/Logo.png" width="200" height="75" alt="">
       </a>
       {% if current_user.is_authenticated %}
       <button class="navbar-toggler username-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
