--- a/app/templates/admin/register.html
+++ b/app/templates/admin/register.html
@@ -19,20 +19,20 @@
         <span style="color: red;">{{ error }}</span>
         {% endfor %}
     </div>
-        <div>
-            {{ form.first_name.label }}
-            {{ form.first_name }}<br>
-            {% for error in form.first_name.errors %}
-            <span style="color: red;">{{ error }}</span>
-            {% endfor %}
-        </div>
-            <div>
-                {{ form.last_name.label }}
-                {{ form.last_name }}<br>
-                {% for error in form.last_name.errors %}
-                <span style="color: red;">{{ error }}</span>
-                {% endfor %}
-            </div>
+    <div>
+        {{ form.first_name.label }}
+        {{ form.first_name }}<br>
+        {% for error in form.first_name.errors %}
+        <span style="color: red;">{{ error }}</span>
+        {% endfor %}
+    </div>
+    <div>
+        {{ form.last_name.label }}
+        {{ form.last_name }}<br>
+        {% for error in form.last_name.errors %}
+        <span style="color: red;">{{ error }}</span>
+        {% endfor %}
+    </div>
     <div>
         {{ form.password.label }}
         {{ form.password }}<br>
@@ -47,8 +47,26 @@
         <span style="color: red;">{{ error }}</span>
         {% endfor %}
     </div>
-
-
+    <div>
+        {{ form.active.label }}
+        {{ form.active|default(true) }}
+        {% for error in form.confirm_password.errors %}
+        <span style="color: red;">{{ error }}</span>
+        {% endfor %}
+    <div>
+    <div>
+        {{ form.admin.label }}
+        {{ form.admin|default(true) }}
+        {% for error in form.confirm_password.errors %}
+        <span style="color: red;">{{ error }}</span>
+        {% endfor %}
+    <div>
+    <div>
+        {{ form.operator.label }}
+        {{ form.operator|default(true) }}
+        {% for error in form.confirm_password.errors %}
+        <span style="color: red;">{{ error }}</span>
+        {% endfor %}
     <div>
         {{ form.submit() }}
     </div>
