--- a/app/templates/admin/configuracion.html
+++ b/app/templates/admin/configuracion.html
@@ -15,7 +15,47 @@
 </nav>
 
 <div class="container-fluid">
-    MODULO CONFIGURACION...
+    <form action="" method="post" novalidate>
+        {{ form.hidden_tag() }}
+        <div>
+            {{ form.title.label }}
+            {{ form.title }}<br>
+            {% for error in form.title.errors %}
+            <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+        </div>
+        <div>
+            {{ form.description.label }}
+            {{ form.description }}<br>
+            {% for error in form.description.errors %}
+            <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+        </div>
+        <div>
+            {{ form.email.label }}
+            {{ form.email }}<br>
+            {% for error in form.email.errors %}
+            <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+        </div>
+        <div>
+            {{ form.n_elements.label }}
+            {{ form.n_elements }}<br>
+            {% for error in form.n_elements.errors %}
+            <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+        </div>
+        <div>
+            {{ form.site_enabled.label }}
+            {{ form.site_enabled }}<br>
+            {% for error in form.site_enabled.errors %}
+            <span style="color: red;">{{ error }}</span>
+            {% endfor %}
+        </div>
+        <div>
+            {{ form.submit() }}
+        </div>
+    </form>
 </div>
 
 {% endblock %}
