--- a/app/templates/admin/layout.html
+++ b/app/templates/admin/layout.html
@@ -43,7 +43,7 @@
     {% if messages %}
     <ul class=flashes>
       {% for message in messages %}
-        <div class="alert alert-danger" role="alert">
+        <div class="alert alert-info" role="alert">
           {{ message }}
         </div>
       {% endfor %}
