--- a/app/static/admin/styles.css
+++ b/app/static/admin/styles.css
@@ -51,6 +51,10 @@ body {
     min-height: 100vh;
 }
 
+.w100important{
+    width: 100%!important;
+}
+
 .form-login {
     width: 100%;
     max-width: 330px;
@@ -112,4 +116,8 @@ footer {
     .justify-user-options {
         justify-content: center;
     }
+}
+
+#mapid {
+    height: 180px;
 }
