--- a/app/templates/admin/turnos.html
+++ b/app/templates/admin/turnos.html
@@ -17,22 +17,12 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col d-flex justify-content-center p-2">
-            <div class="search-box d-inline-flex">
-                <form action="{{ url_for('admin.buscar_por_nombre') }}" method="POST">
-                    <div class="input-group mb-3">
-                        <input type="search" class="form-control" name="buscar-nombre" placeholder="Buscar nombre..."
-                            aria-label="buscar por nombre" aria-describedby="buscar-boton">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="submit" id="buscar-boton">Ok</button>
-                        </div>
-                    </div>
-
-                </form>
+            <div class="search-box d-inline-flex"> 
             </div>
         </div>
         <div class="col d-flex justify-user-options p-2">
             <div>
-                <a class="btn btn-outline-secondary" href="{{ url_for('admin.listar_usuarios', page=1) }}">Limpiar</a>
+                <a class="btn btn-outline-secondary" href="{{ url_for('admin.turnos', page=1) }}">Limpiar</a>
             </div>
             <div class="dropleft mr-1">
                 <a class="btn btn-secondary " href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
@@ -41,14 +31,12 @@
                 </a>
 
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" href="{{ url_for('admin.listar_usuarios', page=1) }}">Todo</a>
-                    <a class="dropdown-item" href="{{ url_for('admin.usuarios_activos') }}">Activos</a>
-                    <a class="dropdown-item" href="{{ url_for('admin.usuarios_bloqueados') }}">Inactivos</a>
+                    <a class="dropdown-item" href="{{ url_for('admin.turnos', page=1) }}">Todo</a>
+                    <!-- Ocupados -->
+                    <!-- Disponibles -->
+                    <!-- Depende... si uso la muestra bonita no seria necesario filtrar -->
+                    <!-- En todo caso los ocupados son los existentes, y los disponibles son "el resto" -->
                 </div>
-            </div>
-            <div>
-                <a class="btn-success btn" href="{{ url_for('admin.registrar_usuario') }}"><i
-                        class="fas fa-user-plus"></i> </a>
             </div>
         </div>
     </div>
@@ -56,68 +44,51 @@
         <table class="table table-sm table-hover table-light table-striped">
             <thead>
                 <tr>
-                    <th scope="col">Rol</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Apellido</th>
+                    <th scope="col">Centro</th>
+                    <th scope="col">Fecha</th>
+                    <th scope="col">Hora comienzo</th>
+                    <th scope="col">Hora fin</th>
+                    <th scope="col">email</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
-                {% if not users.items %}
+                {% if not turnos.items %}
                 <div class="alert alert-warning" role="alert">
                     No se encontraron resultados.
                 </div>
                 {% else %}
 
-                {% for user in users.items %}
-                {% if user.active %}
-                <tr id="{{ user.username }}">
-                    {% else %}
-                <tr class="table-warning" id="{{ user.username }}">
-                    {% endif %}
-                    <th scope="row">
-                        {% for role in user.roles %}
-                        {% if role.id == 1 %}
-                        <span class="badge badge-dark">{{ role.description }}</span><br>
-                        {% else %}
-                        <span class="badge badge-secondary">{{ role.description }}</span><br>
-                        {% endif %}
-                        {% endfor %} </th>
-                    <td>{{ user.email }}</td>
-                    <td>{{ user.first_name }}</td>
-                    <td>{{ user.last_name }}</td>
+                {% for turno in turnos.items %}
+                <tr id="{{ centros[turno.center_id].name_center }}">
+                    <td>{{ turno.appointment_date }}</td>
+                    <td>{{ turno.start_time }}</td>
+                    <td>{{ turno.end_time }}</td>
+                    <td>{{ turno.email }}</td>
                     <td>
-                        <a href="{{ url_for('admin.actualizar_usuario', id_user=user.id) }}"><i
-                                class="fas fa-user-edit text-success" title="Editar"></i></a>
-                        {% if user.active %}
-                        <a href="{{ url_for('admin.activar_bloquear', id=user.id) }}"><i
-                                class="fas fa-user-slash text-secondary" title="Deshabilitar"></i></a>
-                        {% else %}
-                        <a href="{{ url_for('admin.activar_bloquear', id=user.id) }}"><i
-                                class="fas fa-user-slash text-warning" title="Habilitar"></i></a>
-                        {% endif %}
+                        <a href="{{ url_for('admin.actualizar_turno', id=turno.id) }}"><i
+                                class="fas fa-edit text-success" title="Editar"></i></a>
                         <a><i class="fas fa-trash-alt text-danger" title="Eliminar" data-toggle="modal"
-                                data-target="#{{ user.username}}-modal"></i></a>
-                        <div id="{{ user.username }}-modal" class="modal fade bd-example-modal-sm" tabindex="-1"
-                            role="dialog" aria-labelledby="{{ user.username }}-modal-title" aria-hidden="true">
+                                data-target="#{{ turno.appointment_date }}-{{ turno.start_time }}-{{ turno.id }}-modal"></i></a>
+                        <div id="{{ turno.appointment_date }}-{{ turno.start_time }}-modal" class="modal fade bd-example-modal-sm" tabindex="-1"
+                            role="dialog" aria-labelledby="{{ turno.appointment_date }}-{{ turno.start_time }}-modal" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="{{ user.username }}-modal-title">Eliminar usuario
+                                        <h5 class="modal-title" id="{{ turno.appointment_date }}-{{ turno.start_time }}-modal">Eliminar turno
                                         </h5>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                     </div>
                                     <div class="modal-body">
-                                        ¿Estás seguro que deseas eliminar el usuario <b>{{ user.username }}</b>?
+                                        ¿Estás seguro que deseas eliminar el turno con fecha <b>{{ turno.appointment_date }}</b> y hora <b>{{ turno.start_time }}</b>?
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-outline-secondary" data-dismiss="modal"
                                             aria-label="Cancelar">Cancelar</button>
                                         <a class="btn btn-danger"
-                                            href="{{ url_for('admin.eliminar_usuario', id=user.id) }}"
+                                            href="{{ url_for('admin.eliminar_turno', id=turno.id) }}"
                                             aria-label="Borrar">Borrar</a>
                                     </div>
                                 </div>
@@ -133,9 +104,9 @@
     </div>
     <nav aria-label="Paginas de listado de usuarios">
         <ul class="pagination pagination-sm justify-content-center">
-            {% if users.has_prev %}
+            {% if turnos.has_prev %}
             <li class="page-item">
-                <a class="page-link" href="{{ url_for('admin.listar_usuarios', page=users.prev_num) }}" tabindex="-1"
+                <a class="page-link" href="{{ url_for('admin.turnos', page=turnos.prev_num) }}" tabindex="-1"
                     aria-disabled="true">Anterior</a>
             </li>
             {% else %}
@@ -146,11 +117,11 @@
             {% endif %}
 
             <!-- all page numbers -->
-            {% for page_num in users.iter_pages() %}
+            {% for page_num in turnos.iter_pages() %}
             {% if page_num %}
-            {% if page_num != users.page %}
+            {% if page_num != turnos.page %}
             <li class="page-item">
-                <a class="page-link" href="{{ url_for('admin.listar_usuarios', page=page_num) }}">{{ page_num }}</a>
+                <a class="page-link" href="{{ url_for('admin.turnos', page=page_num) }}">{{ page_num }}</a>
             </li>
             {% else %}
             <li class="page-item active">
@@ -164,9 +135,9 @@
             {% endif %}
             {% endfor %}
             <!-- next page -->
-            {% if users.has_next %}
+            {% if turnos.has_next %}
             <li class="page-item">
-                <a class="page-link" href="{{ url_for('admin.listar_usuarios', page=users.next_num) }}">Siguiente</a>
+                <a class="page-link" href="{{ url_for('admin.turnos', page=turnos.next_num) }}">Siguiente</a>
             </li>
             </li>
             {% else %}
